@@ -1,3 +1,10 @@
+Mon Nov  2 17:48:32 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/test_burnin.sh:
+
+          Added test_burnin.sh script to provide burnin semantics for specific
+          test scripts; based on bash script provided by Mike Martinez.
+
 Fri Oct 30 22:09:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.h:
